[package]
name = "parachain-template-node"
version = "0.1.0"
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/cumulus/"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.17"
codec = { package = "parity-scale-codec", version = "3.0.0" }
serde = { version = "1.0.145", features = ["derive"] }
jsonrpsee = { version = "0.15.1", features = ["server"] }

# Local
parachain-template-runtime = { path = "../runtime" }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-cli = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "aa/safely-destroy-large-assets" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-executor = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "aa/safely-destroy-large-assets" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-network-common = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-service = { git = "https://github.com/paritytech/substrate", features = ["wasmtime"] , branch = "aa/safely-destroy-large-assets" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }

# Polkadot
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "master" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "master" }

# Cumulus
cumulus-client-cli = { path = "../../client/cli" }
cumulus-client-consensus-aura = { path = "../../client/consensus/aura" }
cumulus-client-consensus-common = { path = "../../client/consensus/common" }
cumulus-client-network = { path = "../../client/network" }
cumulus-client-service = { path = "../../client/service" }
cumulus-primitives-core = { path = "../../primitives/core" }
cumulus-primitives-parachain-inherent = { path = "../../primitives/parachain-inherent" }
cumulus-relay-chain-inprocess-interface = { path = "../../client/relay-chain-inprocess-interface" }
cumulus-relay-chain-interface = { path = "../../client/relay-chain-interface" }
cumulus-relay-chain-rpc-interface = { path = "../../client/relay-chain-rpc-interface" }
cumulus-relay-chain-minimal-node = { path = "../../client/relay-chain-minimal-node" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "aa/safely-destroy-large-assets" }

[features]
default = []
runtime-benchmarks = [
	"parachain-template-runtime/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
]
try-runtime = ["parachain-template-runtime/try-runtime"]
